--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3070,6 +3070,12 @@ input, select, textarea {
 		.spotlights > section:nth-child(3) {
 			background-color: rgba(0, 0, 0, 0.1);
 		}
+		.spotlights > section:nth-child(4) {
+			background-color: rgba(0, 0, 0, 0.05);
+		}
+		.spotlights > section:nth-child(5) {
+			background-color: rgba(0, 0, 0, 0.1);
+		}
 
 		.spotlights > section.inactive > .image:before,
 		body.is-preload .spotlights > section > .image:before {
@@ -3915,10 +3921,4 @@ input, select, textarea {
 
 		p {
 			color: white;
-		}
-
-		@media screen and (max-width: 736px) {
-			.imagenesport {
-				width: 100%;
-			}
 		}
